--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@ h1 {
 <div class="container">
 
     <!-- FOTO PERFIL -->
-    <img src="IMG-20260222-WA0013.jpg" class="profile-img" alt="Foto de Perfil">
+    <img src="imagens/IMG-20260222-WA0013.jpg" class="profile-img" alt="Foto de Perfil">
 
     <!-- TÍTULO PRINCIPAL -->
     <h1>DATAS DO RODOLFO</h1>
@@ -101,7 +101,7 @@ h1 {
     </div>
 
     <a class="link-btn" href="https://www.sa-mp.mp/download.php" target="_blank">
-        <img src="IMG-20260222-WA0013.jpg">
+        <img src="imagens/IMG-20260222-WA0013.jpg">
         GTA SA Multiplayer
     </a>
 
@@ -111,12 +111,12 @@ h1 {
     </div>
 
     <a class="link-btn" href="#" target="_blank">
-        <img src="IMG-20260222-WA0013.jpg">
+        <img src="imagens/IMG-20260222-WA0013.jpg">
         Data 1
     </a>
 
     <a class="link-btn" href="#" target="_blank">
-        <img src="IMG-20260222-WA0013.jpg">
+        <img src="imagens/IMG-20260222-WA0013.jpg">
         Data 2
     </a>
 
