--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@ h1 {
 <div class="container">
 
     <!-- FOTO PERFIL -->
-    <img src="imagens/IMG-20260222-WA0013.jpg" class="profile-img" alt="Foto de Perfil">
+    <img src="IMG-20260222-WA0013.jpg">
 
     <!-- TÍTULO PRINCIPAL -->
     <h1>DATAS DO RODOLFO</h1>
