--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@ h1 {
 <div class="container">
 
     <!-- FOTO PERFIL -->
-    <img src="IMG-20260222-WA0013.jpg">
+    <img src="foto.jpg" alt="Imagem" style="width:100%; border-radius:15px;">
 
     <!-- TÍTULO PRINCIPAL -->
     <h1>DATAS DO RODOLFO</h1>
