--- a/home.html
+++ b/home.html
@@ -1,13 +1,126 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>Teste</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DATAS DO RODOLFO</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #000;
+    color: white;
+    text-align: center;
+}
+
+.container {
+    max-width: 500px;
+    margin: auto;
+    padding: 20px;
+}
+
+.profile-img {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    margin-top: 30px;
+    border: 3px solid white;
+    object-fit: cover;
+}
+
+h1 {
+    margin-top: 15px;
+    font-size: 24px;
+    color: #ff3c00;
+}
+
+.description {
+    color: #aaa;
+    margin-bottom: 25px;
+}
+
+.section-title {
+    margin: 30px 0 15px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-size: 15px;
+}
+
+.gta-title {
+    color: #00ff88;
+}
+
+.datas-title {
+    color: #ff3c00;
+}
+
+.link-btn {
+    display: flex;
+    align-items: center;
+    background: #e6e6e6;
+    color: black;
+    padding: 15px;
+    border-radius: 40px;
+    margin: 12px 0;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.link-btn:hover {
+    transform: scale(1.05);
+}
+
+.link-btn img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+</style>
 </head>
-<body style="background:black; text-align:center;">
 
-    <h1 style="color:white;">TESTE DA IMAGEM</h1>
+<body>
 
-    <img src="foto.jpg" width="300">
+<div class="container">
+
+    <!-- FOTO PERFIL -->
+    <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg" class="profile-img" alt="Foto">
+
+    <!-- TÍTULO -->
+    <h1>DATAS DO RODOLFO</h1>
+
+    <p class="description">
+        Downloads sempre atualizados 🚀
+    </p>
+
+    <!-- SEÇÃO GTA -->
+    <div class="section-title gta-title">
+        GTA QUE EU JOGO AQ!
+    </div>
+
+    <a class="link-btn" href="https://www.sa-mp.mp/download.php" target="_blank">
+        <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg">
+        GTA SA Multiplayer
+    </a>
+
+    <!-- SEÇÃO DATAS -->
+    <div class="section-title datas-title">
+        DATAS DO RODOLFO
+    </div>
+
+    <a class="link-btn" href="#" target="_blank">
+        <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg">
+        Data 1
+    </a>
+
+    <a class="link-btn" href="#" target="_blank">
+        <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg">
+        Data 2
+    </a>
+
+</div>
 
 </body>
 </html>
