--- a/home.html
+++ b/home.html
@@ -77,6 +77,7 @@ h1 {
     height: 40px;
     border-radius: 50%;
     margin-right: 15px;
+    object-fit: cover;
 }
 </style>
 </head>
@@ -101,7 +102,7 @@ h1 {
     </div>
 
     <a class="link-btn" href="https://www.mediafire.com/file/w3v8w8iwqfpykge/GTA_que_eu_jogo_%2521.apk/file" target="_blank">
-        <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/pt/d/d3/Grand_Theft_Auto_San_Andreas_capa.png">
         GTA do Rodolfo
     </a>
 
@@ -110,9 +111,9 @@ h1 {
         DATAS DO RODOLFO
     </div>
 
-    <a class="link-btn" href="#" target="_blank">
+    <a class="link-btn" href="https://www.mediafire.com/file/cjct734vs6l5veu/Ant-Lag+type+FIVEM+(By+Nil+Plays).zip/file" target="_blank">
         <img src="https://i.postimg.cc/BvcCdFjz/1000041480.jpg">
-        Data 1
+        Data estilo FiveM Android Mali
     </a>
 
     <a class="link-btn" href="#" target="_blank">
